--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <meta name="theme-color" content="#50408e">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
-  <title>Dswip POS</title>
+  <title>GeelaBoba</title>
   
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
